<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_add">Add</string>
    <string name="action_add_formula">Add Formula</string>
    <string name="action_add_to_faves">Add to favourites</string>
    <string name="action_after">After</string>
    <string name="action_api_key">Use API Key</string>
    <string name="action_apply">Apply</string>
    <string name="action_before">Before</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_clear">Clear</string>
    <string name="action_close">Close</string>
    <string name="action_copied">Copied</string>
    <string name="action_copy">Copy</string>
    <string name="action_cut">Cut</string>
    <string name="action_delete">Delete</string>
    <string name="action_done">Done</string>
    <string name="action_down">Down</string>
    <string name="action_download">Download</string>
    <string name="action_edit">Edit</string>
    <string name="action_export">Export</string>
    <string name="action_fave">Favourite</string>
    <string name="action_faves">Faves</string>
    <string name="action_filter">Filter</string>
    <string name="action_fix">Fix</string>
    <string name="action_fix_now">Fix Now</string>
    <string name="action_formula">Formula</string>
    <string name="action_global">Globals</string>
    <string name="action_help">Help</string>
    <string name="action_hide">Hide From Launcher</string>
    <string name="action_home">Home</string>
    <string name="action_ignore">Ignore</string>
    <string name="action_import">Import</string>
    <string name="action_imported">Clipboard imported</string>
    <string name="action_install">Install</string>
    <string name="action_list_dense">Small Icons</string>
    <string name="action_list_normal">Large Icons</string>
    <string name="action_load">Load</string>
    <string name="action_loading">Loading</string>
    <string name="action_lock">Lock</string>
    <string name="action_more">More</string>
    <string name="action_more_from">More from</string>
    <string name="action_more_info">More info</string>
    <string name="action_new">New</string>
    <string name="action_none">None</string>
    <string name="action_ok">OK</string>
    <string name="action_paste">Paste</string>
    <string name="action_pasted">Pasted</string>
    <string name="action_play">Play</string>
    <string name="action_remote_from_faves">Remove from favourites</string>
    <string name="action_remove_formula">Remove Formula</string>
    <string name="action_remove_global">Remove Global</string>
    <string name="action_rename">Rename</string>
    <string name="action_replace">Replace</string>
    <string name="action_replaced">Text replaced</string>
    <string name="action_restore">Restore</string>
    <string name="action_result">Result</string>
    <string name="action_save">Save</string>
    <string name="action_saving">Saving</string>
    <string name="action_search">Search</string>
    <string name="action_setup_customize">Customize</string>
    <string name="action_setup_info">More Info</string>
    <string name="action_setup_remove">Remove</string>
    <string name="action_share">Share</string>
    <string name="action_sort">Sort</string>
    <string name="action_star">Star</string>
    <string name="action_store">Store</string>
    <string name="action_subscribe">Subscribe</string>
    <string name="action_uninstall">Uninstall</string>
    <string name="action_unlock">Unlock</string>
    <string name="action_up">Up</string>
    <string name="action_updating">Updating</string>
    <string name="action_use_global">Use Global</string>
    <string name="action_zoom">Zoom</string>
    <string name="activity_shortcut">KWGT Action</string>
    <string name="app_intro_back_button">BACK</string>
    <string name="app_intro_done_button">DONE</string>
    <string name="app_intro_next_button">NEXT</string>
    <string name="app_intro_skip_button">SKIP</string>
    <string name="app_name">Kustom Widget</string>
    <string name="app_name_short">KWGT</string>
    <string name="app_wp_description">The Most Customizable Wallpaper Ever</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="banner_ad_unit_id">ca-app-pub-3485228456276219/5177256686</string>
    <string name="battery_source_ac">AC</string>
    <string name="battery_source_battery">Battery</string>
    <string name="battery_source_wireless">Wireless</string>
    <string name="battery_status_unknown">Unknown</string>
    <string name="bbcode_bg">will render text with yellow background</string>
    <string name="bbcode_blur">will blur text with a radius of 5 (use negative values for outer blur)</string>
    <string name="bbcode_bold">will render text in bold</string>
    <string name="bbcode_color">will render text in red</string>
    <string name="bbcode_font">will render text with global font myfont</string>
    <string name="bbcode_italic">will render text in italic</string>
    <string name="bbcode_size">will render text with a 20 percent bigger size</string>
    <string name="bbcode_underline">will render text underlined</string>
    <string name="bbcode_xscale">will scale X proportion by 0.5 (a half)</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="com.crashlytics.android.build_id">10828da6ff824181a0e06f261fa955d8</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="dialog_gopro_text_export">Warning! Free version allows preset Exporting and sharing but for importing them again you will need PRO</string>
    <string name="editor_preview_toggle_gyro_off">Magnetic sensors stopped</string>
    <string name="editor_preview_toggle_gyro_on">Magnetic sensors enabled</string>
    <string name="editor_preview_toggle_hide_off">Showing all modules</string>
    <string name="editor_preview_toggle_hide_on">Hiding unselected modules</string>
    <string name="editor_preview_toggle_lock_off">Preview Lock Disabled</string>
    <string name="editor_preview_toggle_lock_on">Preview Lock Enabled</string>
    <string name="editor_preview_toggle_ratio">Ratio set to:</string>
    <string name="editor_preview_toggle_rotate_0">Clock animations disabled</string>
    <string name="editor_preview_toggle_rotate_1">Clock animations at normal speed</string>
    <string name="editor_preview_toggle_zoom_off">Automatic Zoom Off</string>
    <string name="editor_preview_toggle_zoom_on">Automatic Zoom On</string>
    <string name="editor_text_edit_preview">Text Preview</string>
    <string name="editor_text_function_examples">(click appends, long replaces)</string>
    <string name="editor_text_function_examples_title">Examples</string>
    <string name="editor_text_tab_functions">Formula Editor</string>
    <string name="export_edit_author_email">Author Email</string>
    <string name="export_edit_author_name">Author Name</string>
    <string name="export_edit_author_section">Author</string>
    <string name="export_edit_description">Description</string>
    <string name="export_edit_komponent_section">Options</string>
    <string name="export_edit_output_section">Output</string>
    <string name="export_edit_readonly">Readonly (disables exporting)</string>
    <string name="export_edit_sd_directory">Folder:</string>
    <string name="export_edit_sd_filename">Filename:</string>
    <string name="export_edit_title">Title</string>
    <string name="global_add_auto_off">Auto Off</string>
    <string name="global_add_auto_on">Auto On</string>
    <string name="global_add_description">Desc</string>
    <string name="global_add_description_hint">description (optional)</string>
    <string name="global_add_max">Max</string>
    <string name="global_add_min">Min</string>
    <string name="global_add_options">Options list, comma separated, you can split value and description using ##, eg $wf(icon,1)$##Tomorrow Weather</string>
    <string name="global_add_title">Title</string>
    <string name="global_add_type">Type</string>
    <string name="option_replace_case">Match Case</string>
    <string name="option_replace_regex">Regex</string>
    <string name="support_kustom_faq_extended">FAQ</string>
    <string name="support_kustom_kb_desc">Updates, tutorials and knowledge base</string>
    <string name="support_kustom_kb_title">Kustom Website</string>
    <string name="support_reddit_desc">Help &amp; setup sharing</string>
    <string name="support_reddit_title">Reddit Community</string>
</resources>