<?xml version="1.0" encoding="utf-8"?>
<merge
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:kustom="http://schemas.android.com/apk/res-auto">
    <org.kustom.lib.editor.preview.PreviewBgOption android:id="@id/screen_bg" android:padding="8.0dip" android:layout_width="40.0dip" android:layout_height="40.0dip" android:contentDescription="BG" />
    <org.kustom.lib.editor.preview.PreviewScreenOption android:id="@id/screen_count" android:padding="8.0dip" android:layout_width="40.0dip" android:layout_height="40.0dip" android:contentDescription="Count" />
    <org.kustom.lib.editor.preview.PreviewToggleOption android:padding="8.0dip" android:layout_width="40.0dip" android:layout_height="40.0dip" android:contentDescription="Zoom" kustom:optionIconOff="cmd_image_filter_center_focus_weak" kustom:optionIconOn="cmd_image_filter_center_focus" kustom:optionKey="toggle_zoom" kustom:optionTextOff="@string/editor_preview_toggle_zoom_off" kustom:optionTextOn="@string/editor_preview_toggle_zoom_on" />
    <org.kustom.lib.editor.preview.PreviewToggleOption android:padding="8.0dip" android:layout_width="40.0dip" android:layout_height="40.0dip" android:contentDescription="Preview Lock" kustom:optionIconOff="cmd_lock_open" kustom:optionIconOn="cmd_lock" kustom:optionKey="toggle_lock" kustom:optionTextOff="@string/editor_preview_toggle_lock_off" kustom:optionTextOn="@string/editor_preview_toggle_lock_on" />
    <org.kustom.lib.editor.preview.PreviewToggleOption android:padding="8.0dip" android:layout_width="40.0dip" android:layout_height="40.0dip" android:contentDescription="Hide Layers" kustom:optionIconOff="cmd_layers" kustom:optionIconOn="cmd_layers_off" kustom:optionKey="toggle_hide" kustom:optionTextOff="@string/editor_preview_toggle_hide_off" kustom:optionTextOn="@string/editor_preview_toggle_hide_on" />
    <org.kustom.lib.editor.preview.PreviewToggleOption android:padding="8.0dip" android:layout_width="40.0dip" android:layout_height="40.0dip" android:contentDescription="Stop Animations" kustom:optionIconOff="cmd_pause" kustom:optionIconOn="cmd_play" kustom:optionKey="toggle_rotate" kustom:optionTextOff="@string/editor_preview_toggle_rotate_1" kustom:optionTextOn="@string/editor_preview_toggle_rotate_0" />
    <org.kustom.lib.editor.preview.PreviewToggleOption android:id="@id/toggle_gyro" android:padding="8.0dip" android:layout_width="40.0dip" android:layout_height="40.0dip" android:contentDescription="Toggle Gyro" kustom:optionIconOff="cmd_screen_rotation_lock" kustom:optionIconOn="cmd_screen_rotation" kustom:optionKey="toggle_gyro" kustom:optionTextOff="@string/editor_preview_toggle_gyro_off" kustom:optionTextOn="@string/editor_preview_toggle_gyro_on" />
    <org.kustom.lib.editor.preview.PreviewRatioOption android:id="@id/screen_ratio" android:padding="8.0dip" android:layout_width="40.0dip" android:layout_height="40.0dip" android:contentDescription="Preview Ratio" kustom:optionIconOff="cmd_vibrate" kustom:optionIconOn="cmd_vibrate" kustom:optionKey="toggle_ratio" kustom:optionTextOff="@string/editor_preview_toggle_ratio" kustom:optionTextOn="@string/editor_preview_toggle_ratio" />
</merge>