<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="@style/AppTheme.Dialog.Form.Text" android:id="@id/edit_pro_warning" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/dialog_gopro_text_export" android:paddingStart="4.0dip" android:paddingEnd="4.0dip" />
    <com.rengwuxian.materialedittext.MaterialEditText android:id="@id/edit_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/export_edit_title" android:singleLine="true" android:maxLength="30" android:inputType="text" style="@style/AppTheme.Dialog.Form.Entry" />
    <com.rengwuxian.materialedittext.MaterialEditText android:id="@id/edit_description" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/export_edit_description" android:maxLines="4" android:minLines="1" android:maxLength="300" android:inputType="textMultiLine" style="@style/AppTheme.Dialog.Form.Entry" />
    <TextView android:textAppearance="@style/AppTheme.Dialog.Form.Header" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:text="@string/export_edit_author_section" />
    <com.rengwuxian.materialedittext.MaterialEditText android:id="@id/edit_author_name" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/export_edit_author_name" android:singleLine="true" android:inputType="text" style="@style/AppTheme.Dialog.Form.Entry" />
    <com.rengwuxian.materialedittext.MaterialEditText android:id="@id/edit_author_email" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/export_edit_author_email" android:singleLine="true" android:inputType="textEmailAddress" style="@style/AppTheme.Dialog.Form.Entry" />
    <TextView android:textAppearance="@style/AppTheme.Dialog.Form.Header" android:id="@id/komponent_options_header" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:text="@string/export_edit_komponent_section" />
    <CheckBox android:textAppearance="@style/AppTheme.Dialog.Form.Entry" android:id="@id/option_readonly" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/export_edit_readonly" />
    <TextView android:textAppearance="@style/AppTheme.Dialog.Form.Header" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:text="@string/export_edit_output_section" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:paddingStart="8.0dip" android:paddingEnd="8.0dip">
        <TextView android:textAppearance="@style/AppTheme.Dialog.Form.Label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/export_edit_sd_directory" />
        <TextView android:textAppearance="@style/AppTheme.Dialog.Form.Entry" android:id="@id/edit_directory" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/export_edit_sd_directory" android:layout_marginStart="4.0dip" android:layout_marginEnd="4.0dip" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="8.0dip" android:paddingEnd="8.0dip">
        <TextView android:textAppearance="@style/AppTheme.Dialog.Form.Label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/export_edit_sd_filename" />
        <TextView android:textAppearance="@style/AppTheme.Dialog.Form.Entry" android:id="@id/edit_filename" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/export_edit_sd_filename" android:layout_marginStart="4.0dip" android:layout_marginEnd="4.0dip" />
    </LinearLayout>
</LinearLayout>