<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="horizontal" android:paddingLeft="4.0dip" android:paddingRight="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:gravity="end|bottom|center" android:layout_width="60.0dip" android:layout_height="wrap_content" android:text="@string/global_add_title" />
        <EditText android:id="@id/edit_title" android:layout_width="0.0dip" android:layout_height="wrap_content" android:singleLine="true" android:maxLength="8" android:layout_weight="1.0" android:inputType="textNoSuggestions" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:paddingLeft="4.0dip" android:paddingRight="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:gravity="end|bottom|center" android:layout_width="60.0dip" android:layout_height="wrap_content" android:text="@string/global_add_type" />
        <Spinner android:id="@id/edit_type" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/min_max" android:paddingLeft="4.0dip" android:paddingRight="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:gravity="end|bottom|center" android:layout_width="60.0dip" android:layout_height="wrap_content" android:text="@string/global_add_min" />
        <EditText android:id="@id/edit_min" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="0" android:singleLine="true" android:maxLength="5" android:layout_weight="1.0" android:inputType="numberDecimal|numberSigned" />
        <TextView android:gravity="end|bottom|center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:text="@string/global_add_max" />
        <EditText android:id="@id/edit_max" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="720" android:singleLine="true" android:maxLength="5" android:layout_weight="1.0" android:inputType="numberDecimal|numberSigned" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/entries" android:paddingLeft="60.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:paddingLeft="4.0dip" android:paddingTop="16.0dip" android:paddingRight="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/global_add_options" />
        <EditText android:id="@id/edit_entries" android:layout_width="fill_parent" android:layout_height="0.0dip" android:hint="option 1, option 2, option 3" android:layout_weight="1.0" android:inputType="textVisiblePassword|textNoSuggestions" />
    </LinearLayout>
    <org.kustom.lib.editor.dialogs.GlobalVarSwitchModeView android:id="@id/switch_auto_on" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" app:text="@string/global_add_auto_on" />
    <org.kustom.lib.editor.dialogs.GlobalVarSwitchModeView android:id="@id/switch_auto_off" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" app:text="@string/global_add_auto_off" />
    <LinearLayout android:orientation="horizontal" android:paddingLeft="4.0dip" android:paddingRight="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:gravity="end|bottom|center" android:layout_width="60.0dip" android:layout_height="wrap_content" android:text="@string/global_add_description" />
        <EditText android:id="@id/edit_description" android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="@string/global_add_description_hint" android:singleLine="true" android:maxLength="255" android:layout_weight="1.0" android:inputType="text" />
    </LinearLayout>
</LinearLayout>