<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.Toolbar android:id="@id/toolbar" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/AppTheme.Toolbar" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <org.kustom.lib.widgets.IconListItem android:id="@id/support_kb" android:layout_width="fill_parent" android:layout_height="wrap_content" app:desc="@string/support_kustom_kb_desc" app:descAppearance="@style/TextAppearance.AppCompat.Small" app:icon="@drawable/ic_kustom_logo_white_rounded" app:title="@string/support_kustom_kb_title" app:titleAppearance="@style/TextAppearance.AppCompat.Large" />
            <org.kustom.lib.widgets.IconListItem android:id="@id/support_reddit" android:layout_width="fill_parent" android:layout_height="wrap_content" app:desc="@string/support_reddit_desc" app:descAppearance="@style/TextAppearance.AppCompat.Small" app:icon="@drawable/ic_reddit_logo_rounded" app:title="@string/support_reddit_title" app:titleAppearance="@style/TextAppearance.AppCompat.Large" />
            <TextView android:textAppearance="@style/TextAppearance.AppCompat.Large" android:paddingTop="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/support_kustom_faq_extended" android:paddingStart="16.0dip" android:paddingEnd="16.0dip" />
            <TextView android:textAppearance="@style/TextAppearance.AppCompat.Small" android:textColor="?android:textColorPrimary" android:id="@id/faq_content" android:paddingTop="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="16.0dip" android:paddingEnd="16.0dip" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>