<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:padding="@dimen/padding_large" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textStyle="bold" android:paddingLeft="2.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/padding_small" android:text="@string/editor_text_edit_preview" style="@style/AppTheme.Text.Small" />
    <androidx.cardview.widget.CardView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/padding_small" android:layout_marginTop="0.0dip" android:layout_marginRight="@dimen/padding_small" android:layout_marginBottom="@dimen/padding_large">
        <TextView android:textAppearance="@style/AppTheme.Text.Edit.Formula.Preview.Medium" android:id="@id/preview" android:background="?kustomPrimaryLight" android:padding="@dimen/padding_small" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/editor_text_edit_preview" android:maxLines="5" />
    </androidx.cardview.widget.CardView>
    <TextView android:textStyle="bold" android:paddingLeft="2.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/padding_small" android:text="@string/editor_text_tab_functions" style="@style/AppTheme.Text.Small" />
    <androidx.cardview.widget.CardView android:padding="@dimen/padding_small" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/padding_small" android:layout_marginRight="@dimen/padding_small" android:layout_marginBottom="@dimen/padding_large">
        <org.kustom.lib.editor.expression.EditorView android:id="@id/formula_editor" android:background="?kustomPrimaryLight" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    </androidx.cardview.widget.CardView>
    <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/padding_small">
        <TextView android:textStyle="bold" android:paddingLeft="2.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/editor_text_function_examples_title" style="@style/AppTheme.Text.Small" />
        <TextView android:paddingLeft="@dimen/padding_small" android:paddingRight="@dimen/padding_small" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/editor_text_function_examples" style="@style/AppTheme.Text.Small" />
    </LinearLayout>
    <FrameLayout android:id="@id/container" android:layout_width="fill_parent" android:layout_height="fill_parent" />
</LinearLayout>